# buttplug-developer-guide

./: .gitignore  .pnp.cjs  .travis.yml  README.md  architecture.html  book.js  book.json  buttplug-ethics.html  buttplug-protocol-and-etiquette.html  design-patterns.html  docusaurus.config.js  extras.md  index.html  introduction.html  message-menagerie.html  package.json  search_index.json  sidebars.js
dev-manual/: architecture.md  buttplug-ethics.md  buttplug-protocol-and-etiquette.md  introduction.md
developer-guide/: README.md  SUMMARY.md  buttplug-ethics.md  design-doc-extras.org  design-patterns.md  foreword.md  introduction.md  message-menagerie.md  ping.cs  writing-buttplug-applications.md
developer-guide/.vuepress/: config.js
developer-guide/architecture/: architecture.md  client-in-depth.md  intro.md  protocol-in-depth.md  server-in-depth.md  sessions-and-components.md  terms.md  the-3-genders.md
developer-guide/cookbook/: connector-setup-in-depth.md  intro.md  privacy-models.md  raw-device-commands.md
developer-guide/extending-buttplug-core/: intro.md
developer-guide/inflating-buttplug/: adding-device-comm-managers.md  adding-device-protocols.md  adding-new-messages.md  writing-new-servers.md
developer-guide/intro/: buttplug-ethics.md  getting-help.md  how-to-read.md  introduction.md
developer-guide/writing-buttplug-applications/: api-basics.md  application.md  connecting.md  connectors.md  device-control.md  device-enum.md  errors.md  intro.md  logging.md
docs/: foreword.md  intro.md
docs/architecture/: client-in-depth.md  intro.md  protocol-in-depth.md  server-in-depth.md  sessions-and-components.md  terms.md
docs/cookbook/: command-menagerie.md  connector-setup-in-depth.mdx  privacy-models.md
docs/inflating-buttplug/: adding-new-ffi-implementations.md  device-configuration-file.md  intro.md  writing-new-clients.md
docs/intro/: buttplug-ethics.md  getting-help.md  how-to-read.mdx  introduction.md
docs/writing-buttplug-applications/: api-basics.mdx  application.mdx  connecting.mdx  connectors.mdx  device-control.mdx  device-enum.mdx  intro.md  logging.mdx
examples/csharp/: CodeMaid.config  csharp.sln
examples/javascript/: async-example.js  device-control-example.js  device-enumeration-example.js  embedded-connector-example.js  errors-example.js  index.html  (+2 more)
examples/rust/: Cargo.toml
extras/: buttplug-protocol-and-etiquette.md
(+45 files in other folders)
