[package]
name = "buttplug-developer-guide-examples"
version = "0.1.0"
authors = ["Melody Horn <melody@boringcactus.com>", "Kyle Machulis <kyle@nonpolynomial.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
buttplug = { version = "2.0.6", features = ["async-std-runtime", "client", "server", "serialize-json", "btleplug-manager", "websockets", "xinput-manager", "serial-manager", "lovense-dongle-manager"] }
# buttplug = { path = "../../../buttplug-rs/buttplug", features = ["async-std-runtime", "client", "server", "serialize-json", "btleplug-manager", "websockets", "xinput-manager", "serial-manager", "lovense-dongle-manager"] }
async-std = { version = "1.7.0", features = ["attributes"] }
anyhow = "1.0.34"
tracing-subscriber = "0.2.15"

