[package]
name = "buttplug-developer-guide-examples"
version = "0.1.0"
authors = ["Melody Horn <melody@boringcactus.com>", "Kyle Machulis <kyle@nonpolynomial.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
buttplug = "3.0.0"
# buttplug = { path = "../../../buttplug-rs/buttplug", features = ["tokio-runtime", "client", "server", "serialize-json", "btleplug-manager", "websockets", "xinput-manager", "serial-manager", "lovense-dongle-manager"] }
anyhow = "1.0.34"
tracing-subscriber = "0.2.15"
futures = "0.3.13"
tokio = { version = "1.4.0", features = ["io-std", "io-util", "rt-multi-thread", "macros"] }
