[package]
name = "buttplug-developer-guide-examples"
version = "0.1.0"
authors = ["Melody Horn <melody@boringcactus.com>", "Kyle Machulis <kyle@nonpolynomial.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
buttplug = "6.1.0"
# buttplug = { path = "../../../buttplug-rs/buttplug", features = ["tokio-runtime", "client", "server", "serialize-json", "btleplug-manager", "websockets", "xinput-manager", "serial-manager", "lovense-dongle-manager"] }
anyhow = "1.0.66"
tracing-subscriber = "0.3.16"
futures = "0.3.25"
tokio = { version = "1.21.2", features = ["io-std", "io-util", "rt-multi-thread", "macros"] }
